examples/invalid/03_top_level_open_forward_value.lane
// invalid: top-level open may only open an already available value
open constants

struct Constants {
  answer : Int
}

let constants : Constants = Constants::{ answer: 42 }

